--- a/package.json
+++ b/package.json
@@ -11,30 +11,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "@ngrx/effects": "^7.4.0",
-    "@ngrx/router-store": "^7.4.0",
-    "@ngrx/store": "^7.4.0",
-    "@ngrx/store-devtools": "^7.4.0",
+    "@angular/animations": "^8.0.0-rc.4",
+    "@angular/common": "^8.0.0-rc.4",
+    "@angular/compiler": "^8.0.0-rc.4",
+    "@angular/core": "^8.0.0-rc.4",
+    "@angular/forms": "^8.0.0-rc.4",
+    "@angular/platform-browser": "^8.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "^8.0.0-rc.4",
+    "@angular/router": "^8.0.0-rc.4",
+    "@ngrx/effects": "^8.0.0-beta.2",
+    "@ngrx/router-store": "^8.0.0-beta.2",
+    "@ngrx/store": "^8.0.0-beta.2",
+    "@ngrx/store-devtools": "^8.0.0-beta.2",
     "@types/lodash-es": "^4.17.3",
     "core-js": "^2.5.4",
     "lodash-es": "^4.17.11",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.8",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
+    "@angular-devkit/build-angular": "^0.800.0-rc.4",
+    "@angular/cli": "^8.0.0-rc.4",
+    "@angular/compiler-cli": "^8.0.0-rc.4",
+    "@angular/language-service": "^8.0.0-rc.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -49,6 +49,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "~3.4.0"
   }
 }
